Add coffee card image and links to related images
- Added a new JPEG image for the coffee card.
- Created a text file containing links to related images.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- Головна сторінка -->
-  <!-- Навігація -->
+  <!-- #region Навігація -->
   <header>
     <div class="container">
       <div class="row">
@@ -67,6 +67,7 @@
       </div>
     </nav>
   </header>
+  <!-- #endregion -->
   <!-- Головна секція -->
   <section class="hero-section">
     <div class="container">
@@ -74,11 +75,123 @@
         <div class="col-sm-12 col-md-6 text-left rg-bg-primary rg-hero-container">
           <h1 class="rg-secondary-color">Royal Gambit</h1>
           <p>У самому серці міста Royal Gambit поєднує аромат авторської кави з захоплюючими шаховими партіями. Тут народжуються нові ідеї, знайомства та перемоги — за філіжанкою еспресо й шахівницею.</p>
-          <a href="#" class="btn btn-primary rg-bg-secondary">Дізнатися більше</a>
+          <a href="#about" class="btn btn-primary rg-bg-secondary">Дізнатися більше</a>
         </div>
       </div>
     </div>
-
+  </section>
+  <!-- #region Про нас -->
+  <section class="about-section" id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center mb-5">
+          <h2 class="fs-2">Про нас</h2>
+          <p><strong>Ідея створення</strong>:
+            Royal Gambit народився з любові до кави та шахів. Ми мріяли про місце, де можна не лише насолодитися ароматним напоєм, а й зануритися у світ стратегій, тактики та приємного спілкування. Так виникло кафе, де кожен стіл — це не просто місце для кавування, а арена для інтелектуальних баталій.
+          </p>
+          <p> 
+            <strong>Наша місія</strong>:
+            Ми прагнемо зробити шахи ближчими до кожного — незалежно від віку чи досвіду. Royal Gambit — це простір, де розвивається розум, твориться атмосфера довіри та росте спільнота.
+          </p>
+          <a href="#" class="btn btn-primary rg-bg-secondary">Зв'язатися з нами</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <h3 class="text-center fs-3">Наші особливості</h3>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 p-3 d-flex justify-content-center">
+          <div class="card" style="width: 18rem;">
+            <img src="./image/card-coffee.jpeg" class="card-img-top rg-img-cut" alt="coffe and chess">
+            <div class="card-body">
+              <h5 class="card-title">Авторська кава і десерти</h5>
+              <p class="card-text">спеціально розроблене меню для гравців і гостей.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 p-3 d-flex justify-content-center">
+          <div class="card" style="width: 18rem;">
+            <img src="./image/card-2-chess.jpg" class="card-img-top rg-img-cut" alt="chess">
+            <div class="card-body">
+              <h5 class="card-title">Шахові столи доступні всім</h5>
+              <p class="card-text">приєднуйся до гри будь-коли, без додаткової оплати.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-lg-4 d-flex justify-content-center p-3">
+          <div class="card" style="width: 18rem;">
+            <img src="./image/card-3-turn.jpg" class="card-img-top rg-img-cut" alt="tournaments">
+            <div class="card-body">
+              <h5 class="card-title">Турніри та майстер-класи</h5>
+              <p class="card-text">регулярні події для новачків і досвідчених гравців.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- #endregion -->
+  <!-- Наші спеціальні пропозиції -->
+  <!-- Галерея (Gallery) -->
+  <!-- Відгуки клієнтів (Testimonials) -->
+  <!-- #region Контакти (Contact) -->
+  <section class="contact-section" id="contact">
+    <div class="container">
+      
+    </div>
+  </section>
+  <!-- #endregion -->
+  <!-- #region Підвал (Footer) -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-lg-3 text-center">
+          <h2 class="fs-2">Зв'язатися з нами</h2>
+          <p>Email :</p>
+          <a href="mailto:sasha.klishch1@gmail.com">hello@royalgambit.ua</a>
+          <p>Телефон:</p>
+          <a href="tel:+380631234567">+38 (063) 123 45 67</a>
+        </div>
+        <div class="col-12 col-lg-6 text-center">
+          <img src="./image/logotype6.svg" alt="Logo" width="80" class="d-inline-block align-text-top">
+          <h2 class="fs-2">Royal Gambit</h2>
+          <ul class="d-flex justify-content-center list-unstyled">
+            <li>
+              <a href="#">Головна</a>
+            </li>
+            <li>
+              <a href="#">Про нас</a>
+            </li>
+            <li>
+              <a href="#">Послуги</a>
+            </li>
+            <li>
+              <a href="#">Галерея</a>
+            </li>
+            <li>
+              <a href="#">Контакти</a>
+            </li>
+          </ul>
+          <p>Залишайте свої відгуки та запитання, і ми з радістю відповімо на них!</p>
+        </div>
+        <div class="col-12 col-lg-3 text-center">
+          <h2 class="fs-2">Робочі години</h2>
+          <p>Понеділок-п'ятниця:</p>
+          <p>08:00-22:00</p>
+          <p>Субота-неділя:</p>
+          <p>10:00-16:00</p>
+        </div>
+      <div class="row">
+        <div class="col-12 text-center">
+          <hr>
+          <p>&copy; 2023 Royal Gambit. Всі права захищені.</p>
+          <p>Розроблено з любов'ю до кави та шахів.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- #endregion -->
+  </section>
   <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
