--- a/index.html
+++ b/index.html
@@ -131,13 +131,131 @@
     </div>
   </section>
   <!-- #endregion -->
-  <!-- Наші спеціальні пропозиції -->
-  <!-- Галерея (Gallery) -->
-  <!-- Відгуки клієнтів (Testimonials) -->
+  <!-- #region Наші спеціальні пропозиції -->
+  <section class="special-offers-section rg-bg-accent">
+    <div class="container">
+      <div class="row">
+        <div class="col-12"></div>
+      </div>
+    </div>
+  </section>
+  <!-- #endregion -->
+  <!-- #region Галерея (Gallery) -->
+  <section class="gallery-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center mb-5">
+          <h2 class="fs-2">Галерея</h2>
+          <p>Зазирніть у наш світ, де кава та шахи поєднуються в ідеальній гармонії.</p>
+          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./image/foto01.jpg" class="d-block rg-img-cut-gallery" alt="cafe interior">
+              </div>
+              <div class="carousel-item">
+                <img src="./image/foto02.jpg" class="d-block rg-img-cut-gallery" alt="cafe interior">
+              </div>
+              <div class="carousel-item">
+                <img src="./image/foto03.jpg" class="d-block rg-img-cut-gallery" alt="cafe interior">
+              </div>
+              <div class="carousel-item">
+                <img src="./image/foto04.jpg" class="d-block rg-img-cut-gallery" alt="cafe interior">
+              </div>
+            </div>
+            <button class="carousel-control-prev rg-bg-secondary" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next rg-bg-secondary" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+  </section>
+  <!-- #endregion -->
+  <!-- #region Відгуки клієнтів (Testimonials) -->
+  <section class="testimonials-section rg-bg-circle-repeat">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center mb-5">
+          <h2 class="fs-2 rg-primary-color">Відгуки клієнтів</h2>
+          <p class="rg-primary-color">Ми цінуємо кожен відгук і завжди прагнемо вдосконалюватися. Дякуємо нашим клієнтам за підтримку!</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-6 col-lg-4 p-3 d-flex justify-content-center">
+          <div class="card" style="width: 18rem;">
+            <img src="./image/testimonial1.jpg" class="card-img-top rg-img-cut-testimonials" alt="coffe and chess">
+            <div class="card-body text-center">
+              <h5 class="card-title">Олександр</h5>
+              <p class="card-text">"Royal Gambit — це місце, де я завжди відчуваю себе як вдома. Кава тут просто неймовірна!"</p>
+              <p>★★★★★</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 p-3 d-flex justify-content-center">
+          <div class="card" style="width: 18rem;">
+            <img src="./image/testimonial2.jpg" class="card-img-top rg-img-cut-testimonials" alt="chess">
+            <div class="card-body text-center">
+              <h5 class="card-title">Марія</h5>
+              <p class="card-text">"Тут я знайшла нових друзів і навчилася грати в шахи. Дякую Royal Gambit!"</p>
+              <p>★★★★★</p>
+            </div>
+          </div>
+        </div>    
+        <div class="col-sm-12 col-lg-4 d-flex justify-content-center p-3">
+          <div class="card" style="width: 18rem;">
+            <img src="./image/testimonial3.png" class="card-img-top rg-img-cut-testimonials" alt="tournaments">
+            <div class="card-body text-center">
+              <h5 class="card-title">Іван</h5>
+              <p class="card-text">"Royal Gambit — це не просто кафе, це справжня шахова арена. Я завжди тут!"</p>
+              <p>★★★★☆</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- #endregion -->
   <!-- #region Контакти (Contact) -->
   <section class="contact-section" id="contact">
     <div class="container">
-      
+      <div class="row">
+        <div class="col-12 text-center mb-5">
+          <h2 class="fs-2">Контакти</h2>
+          <p>Ми завжди раді відповісти на ваші запитання та прийняти замовлення. Залишайте свої відгуки та запитання, і ми з радістю відповімо на них!</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-lg-6 mb-4">
+          <form class="rg-bg-secondary rg-primary-color rounded p-4">
+            <div class="mb-3">
+              <label for="name" class="form-label">Ваше ім'я</label>
+              <input type="text" class="form-control" id="name" required>
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" class="form-control" id="email" required>
+            </div>
+            <div class="mb-3">
+              <label for="message" class="form-label">Повідомлення</label>
+              <textarea class="form-control" id="message" rows="4" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary rg-form-button">Відправити</button>
+          </form>
+        </div>
+        <div class="col-12 col-lg-6 text-center">
+          <h3 class="fs-3">Наші координати</h3>
+          <p><strong>Адреса:</strong> вул. Стратегічна, 5, Тернопіль,79000, Україна</p>
+          <p><strong>Телефон:</strong> +38 (063) 123 45 67</p>
+          <p><strong>Email:</strong> <a href="mailto:sasha.klishch1@gmail.com">hello@royalgambit.ua</a></p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d66333.23412067392!2d25.5152676872737!3d49.54843667573876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473036ad4b82ce75%3A0xc484a447edb154e8!2sTernopil%2C%20Ternopil%20Oblast%2C%2046003!5e1!3m2!1sen!2sua!4v1746439048295!5m2!1sen!2sua" width="80%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
     </div>
   </section>
   <!-- #endregion -->
@@ -155,7 +273,7 @@
         <div class="col-12 col-lg-6 text-center">
           <img src="./image/logotype6.svg" alt="Logo" width="80" class="d-inline-block align-text-top">
           <h2 class="fs-2">Royal Gambit</h2>
-          <ul class="d-flex justify-content-center list-unstyled">
+          <ul class="d-flex flex-wrap justify-content-center list-unstyled">
             <li>
               <a href="#">Головна</a>
             </li>
